# ComplianceOps-Reference-Architecture-for-Bedrock-Agentic-Chatbot

./: .gitignore  COST.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  terraform.yml
app/: Dockerfile  __init__.py  agent.py  handler.py  requirements-lambda.txt  tools.py
attestations/: initial-attestations.yaml  schema.yaml
compliance/catalogs/: eu-ai-act-minimal.yaml  gdpr-minimal.yaml
compliance/procedures/: dpa-notification-template.yaml  human-oversight-procedure.md  incident-response.md  ropa-entry.yaml
evidence/automated/: bedrock-model-list.json  billing-alarms.json  cloudtrail-status.json  guardduty-status.json  iam-password-policy.json  manifest.json  s3-buckets.json
infra/terraform/: .terraform.lock.hcl  bedrock.tf  codebuild.tf  dynamodb.tf  iam.tf  lambda.tf  outputs.tf  s3.tf  variables.tf  versions.tf
scripts/: collect_evidence.py  generate_report.py
tests/: test_report_generator.py
